# enterprise-it-network-simulation

./: CMakeLists.txt  LICENSE  README.md  README.txt  network_attack_simulator.bat  network_attack_simulator.sh  start_simulation.bat  start_simulation.sh  stop_simulation.bat  stop_simulation.sh
config/: firewall_rules.json  network_config.json  qos_config.json  vpn_config.json
enterprise-it-network-simulation/: CMakeLists.txt  main.cpp
enterprise-it-network-simulation/tests/: test_database_server.cpp  test_encryption.cpp  test_mail_server.cpp  test_notebook_client.cpp  test_ospf_routing.cpp  test_packet_handler.cpp  test_qos_management.cpp  test_smartphone_client.cpp  test_switch_device.cpp  test_vpn_server.cpp  test_vpn_tunnel.cpp  test_web_server.cpp
src/clients/: client_base.h  notebook.cpp  smartphone.cpp
src/devices/: Computer.hpp  DatabaseServer.cpp  Device.hpp  FileServer.hpp  Firewall.cpp  Firewall.hpp  MailServer.cpp  MailServer.hpp  Printer.cpp  Printer.hpp  Router.cpp  Router.hpp  VPNServer.cpp  VPNServer.hpp  WebServer.cpp  computer.cpp  database_server.cpp  file_server.cpp  firewall.cpp  mail_server.cpp  printer.cpp  router.cpp  vpn_server.cpp  web_server.cpp
src/devices/multi_threaded_webserver/: CMakeLists.txt  WebServer.hpp  main.cpp  server.cpp  server.hpp  thread_pool.cpp  thread_pool.hpp  tocken_bucket.cpp  token_bucket.hpp
src/devices/multi_threaded_webserver/curl/: curl.h  curl_license.txt
src/network/: Switch.cpp  Switch.hpp  VpnTunnel.cpp  VpnTunnel.hpp  switch.cpp
src/os_simulation/: CmdlInterface.cpp  CmdlInterface.hpp  FileSystem.cpp  FileSystem.hpp  Process.cpp  Process.hpp  ProcessManager.cpp  ProcessManager.hpp  Scheduler.cpp  Scheduler.hpp  Threading.cpp  Threading.hpp  command_line_interface.cpp  file_system.cpp  main.cpp  process_management.cpp  threading.cpp
src/security/: encryption.cpp  encryption.hpp  ids.cpp  ids.hpp  mitm_attack.cpp  smurf_attack.cpp
tests/: network_tests.cpp  os_tests.cpp  security_tests.cpp  vpn_tests.cpp
(+79 files in other folders)
